readme and small fixes