@@ -1,2 +1,59 @@
 # Minesweeper
-a simple minesweeper application using javaFX
+a simple minesweeper application built using JavaFX. 
+
+---
+
+## Features
+
+- **Choose number of rows and columns**
+- **Choose game difficulty**
+- **Play classic minesweeper**
+
+---
+
+## Prerequisites
+
+Before running the application, ensure you have the following installed:
+
+- **Java Development Kit (JDK)** (version 21 or higher)
+- **JavaFX SDK**
+
+---
+
+## Setup Instructions
+
+1. **Clone the Repository**:
+   ```bash
+   git clone <repository_url>
+   cd paint-application
+   ```
+
+2. **Download JavaFX SDK**:
+   - Visit the [JavaFX official website](https://openjfx.io) and download the appropriate SDK for your system.
+   - Extract the SDK to a directory on your system.
+
+3. **Set JavaFX Path**:
+   - Add the JavaFX SDK to your project's `--module-path`.
+
+4. **Run the Application**:
+   - Use your IDE (e.g., IntelliJ IDEA, Eclipse) to set up the project.
+   - Configure the VM options for JavaFX (example for IntelliJ):
+     ```
+     --module-path "<path_to_javafx_sdk>" --add-modules javafx.controls,javafx.fxml
+     ```
+   - Build and run the project.
+
+---
+
+## Contributing
+
+Contributions are welcome! If you'd like to contribute, please:
+
+1. Fork the repository.
+2. Create a new branch for your feature (`git checkout -b feature-name`).
+3. Commit your changes (`git commit -m 'Add some feature'`).
+4. Push to the branch (`git push origin feature-name`).
+5. Create a Pull Request.
+
+---
+
